[package]
name = "repro-stackoverflow-keys"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/repro-stackoverflow-keys"
documentation = "https://docs.rs/repro-stackoverflow-keys"
description = "Repro for SO ssl keys example"
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"

[dependencies]
failure = "0.1.2"
openssl = "0.10.11"
base64 = "0.9.2"

[dev-dependencies]
